--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     </div>
     <!-- main -->
     <main>
+        <div class="top-banner">main에서 수정 진행</div>
         <section class="promotion">
             <div class="inner">
                 <h2 class="section-title">PROMOTION</h2>
