--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <p>이건 사인인에서 수정한거야</p>
     <!-- header -->
     <header>
         <div class="inner">
@@ -109,7 +110,6 @@
     </div>
     <!-- main -->
     <main>
-        <div class="top-banner">main에서 수정 진행</div>
         <section class="promotion">
             <div class="inner">
                 <h2 class="section-title">PROMOTION</h2>
