모바일 최종

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <li><a href="#">창업안내</a></li>
             <li><a href="#">파바 매거진</a></li>
             <li><a href="#">파바 스토리</a></li>
-            <li>
+            <li class="sub-has">
                 <a href="#">상품 안내</a>
                 <div class="sub-wrap">
                     <ul class="sub-menu">
@@ -121,7 +121,6 @@
                                 <h3>파바 🩷특별한 선물🩷과 함께하세요!</h3>
                                 <p class="read-more"><a href="#">READ MORE</a></p>
                             </div>
-                            <p class="more-btn"><a href="#">SHOW MORE</a></p>
                         </li>
                         <li>
                             <div class="img-box"><a href="#"><img src="./images/promotion-img-02.jpg" alt=""></a></div>
